<resources>
    <string name="app_name">LiveTranslation</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="login2">LOGIN</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login_successful">Login successful</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_error">There was an error while trying to login</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="downloading_model_files">Downloading model files…</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>